Changed .jpg files to .webp

--- a/edificaciones.html
+++ b/edificaciones.html
@@ -2,7 +2,7 @@
     <h5 class="display-6 text-center titulos"> Edificaciones</h5>
     <div class="cartas">
         <div class="card m-3 mb-5" style="width: 18rem;">
-            <img src="assets/fotos/casa-mardel.jpg" class="img-fluid card-img-top"/>
+            <img src="assets/fotos/casa-mardel.webp" class="img-fluid card-img-top"/>
             <div class="card-body">
                 <h6>Edificio Mar del Plata</h6><hr>
                 <p>
@@ -14,7 +14,7 @@
         </div></div>
 
         <div class="card m-3 mb-5" style="width: 18rem;">
-            <img src="assets/fotos/depto-cba.jpg" class="img-fluid card-img-top"/>
+            <img src="assets/fotos/depto-cba.webp" class="img-fluid card-img-top"/>
             <div class="card-body">
                 <h6>Departamento Córdoba</h6><hr>
                 <p>
@@ -26,7 +26,7 @@
         </div></div>
         
         <div class="card m-3 mb-5" style="width: 18rem;">
-            <img src="assets/fotos/chacra.jpg" class="img-fluid card-img-top"/>
+            <img src="assets/fotos/chacra.webp" class="img-fluid card-img-top"/>
             <div class="card-body">
                 <h6>Chacra Los Laureles</h6><hr>
                 <p>
@@ -38,7 +38,7 @@
         </div></div>
 
         <div class="card m-3 mb-5" style="width: 18rem;">
-            <img src="assets/fotos/estancia.jpg" class="img-fluid card-img-top"/>
+            <img src="assets/fotos/estancia.webp" class="img-fluid card-img-top"/>
             <div class="card-body">
                 <h6>Estancia El Arroyo</h6><hr>
                 <p>
@@ -63,21 +63,21 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-            <img src="assets/fotos/casa1.jpg" class="d-block w-100" alt="foto de casa uruguay">
+            <img src="assets/fotos/casa1.webp" class="d-block w-100" alt="foto de casa uruguay">
             <div class="carousel-caption d-none d-md-block">
                 <h4>Casa Zanetti</h4>
                 <p>Punta del Este, Maldonado, Uruguay.</p>
             </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-            <img src="assets/fotos/casa2.jpg" class="d-block w-100" alt="foto de casa paraná">
+            <img src="assets/fotos/casa2.webp" class="d-block w-100" alt="foto de casa paraná">
             <div class="carousel-caption d-none d-md-block">
                 <h4>Casa Mascherano</h4>
                 <p>Paraná, Entre Ríos, Argentina.</p>
             </div>
             </div>
             <div class="carousel-item">
-            <img src="assets/fotos/casa3.jpg" class="d-block w-100" alt="foto de departamento buenos aires">
+            <img src="assets/fotos/casa3.webp" class="d-block w-100" alt="foto de departamento buenos aires">
             <div class="carousel-caption d-none d-md-block">
                 <h4>Departamento Materazzi</h4>
                 <p>Recoleta, Buenos Aires, Argentina.</p>
