--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Arquitech &copy; es un estudio arquitectónico especializado en diseño y estructura de edificaciones premium.">
+	<meta name="description" content="Arquitech &copy; es un estudio arquitectonico especializado en diseño y estructura de edificaciones premium.">
 	<meta name="keywords" content="arquitectura, arquitectos, diseño, estudio arquitectonico, arquitectos argentinos, arquitectura argentina, arquitectura uruguaya">	
 	<link rel="canonical" href="https://arquitech.com/">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
